[package]
name = "web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
log = "0.4"
regex = "1.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
http = "0.2.8"
cookie = "0.17.0"
once_cell = "1.17.0"
r2d2 = "0.8.10"
r2d2_postgres = "0.18.1"
r2d2_mysql = "23.0.0"
r2d2_sqlite = "0.21.0"
mysql = "23.0.1"
rusqlite = "0.28.0"

